test/corpus/Tutorial_How-to-write-input-files.txt
============================
Simple standalone music file
============================

{
  c e g e
}

----------------------------

(source_file
    (music
        (note name: (note_name))
        (note name: (note_name))
        (note name: (note_name))
        (note name: (note_name))))

=============================
Standalone music with octaves
=============================

{
  a' a, c' f,
  g g'' a,, f'
}

-----------------------------

(source_file
    (music
        (note name: (note_name) octave: (quotes))
        (note name: (note_name) octave: (quotes))
        (note name: (note_name) octave: (quotes))
        (note name: (note_name) octave: (quotes))
        (note name: (note_name))
        (note name: (note_name) octave: (quotes))
        (note name: (note_name) octave: (quotes))
        (note name: (note_name) octave: (quotes))
        ))

===============================
Standalone music with durations
===============================

{
  a'4 a a4. a8
  a8. a16 a a8. a8 a4.
}

-------------------------------

(source_file
    (music
        (note name: (note_name) octave: (quotes) duration: (steno_duration))
        (note name: (note_name))
        (note name: (note_name) duration: (steno_duration))
        (note name: (note_name) duration: (steno_duration))
        (note name: (note_name) duration: (steno_duration))
        (note name: (note_name) duration: (steno_duration))
        (note name: (note_name))
        (note name: (note_name) duration: (steno_duration))
        (note name: (note_name) duration: (steno_duration))
        (note name: (note_name) duration: (steno_duration))
        ))

===========================
Standalone music with rests
===========================

{
  a'4 r r2
  r8 a r4 r4. r8
}

---------------------------

(source_file
    (music
        (note name: (note_name) octave: (quotes) duration: (steno_duration))
        (rest)
        (rest duration: (steno_duration))
        (rest duration: (steno_duration))
        (note name: (note_name))
        (rest duration: (steno_duration))
        (rest duration: (steno_duration))
        (rest duration: (steno_duration))
        ))


==========================
Music with time signatures
==========================

{
  \time 3/4
  a'4 a a
  \time 6/8
  a4. a
  \time 4/4
  a4 a a a
}

--------------------------

(source_file
    (music
        (time_signature_event numerator: (number) denominator: (number))
        (note name: (note_name) octave: (quotes) duration: (steno_duration))
        (note name: (note_name))
        (note name: (note_name))
        (time_signature_event numerator: (number) denominator: (number))
        (note name: (note_name) duration: (steno_duration))
        (note name: (note_name))
        (time_signature_event numerator: (number) denominator: (number))
        (note name: (note_name) duration: (steno_duration))
        (note name: (note_name))
        (note name: (note_name))
        (note name: (note_name))
        ))

=========================
Music with tempo markings
=========================

{
  \time 3/4
  \tempo "Andante"
  a'4 a a
  \time 6/8
  \tempo 4. = 96
  a4. a
  \time 4/4
  \tempo "Presto" 4 = 120 - 132
  a4 a a a
}

-------------------------

(source_file
    (music
        (time_signature_event numerator: (number) denominator: (number))
        (tempo_event text: (text))
        (note name: (note_name) octave: (quotes) duration: (steno_duration))
        (note name: (note_name))
        (note name: (note_name))
        (time_signature_event numerator: (number) denominator: (number))
        (tempo_event duration: (steno_duration) tempo_range: (tempo_range (number)))
        (note name: (note_name) duration: (steno_duration))
        (note name: (note_name))
        (time_signature_event numerator: (number) denominator: (number))
        (tempo_event text: (text) duration: (steno_duration) tempo_range: (tempo_range (number) (number)))
        (note name: (note_name) duration: (steno_duration))
        (note name: (note_name))
        (note name: (note_name))
        (note name: (note_name))
        ))

=======================
Music with clef changes
=======================

{
  \clef treble
  c'1
  \clef alto
  c1
  \clef tenor
  c1
  \clef bass
  c1
}

-----------------------

(source_file
    (music
        (clef (clef_style))
        (note name: (note_name) octave: (quotes) duration: (steno_duration))
        (clef (clef_style))
        (note name: (note_name) duration: (steno_duration))
        (clef (clef_style))
        (note name: (note_name) duration: (steno_duration))
        (clef (clef_style))
        (note name: (note_name) duration: (steno_duration))
        ))
